Created Graph Page and added scaling listeners

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
-*{
-    background-color: teal;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgb(247, 247, 247);
+}
+
+#mainBody {
+  display: flex;
 }
